--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preload" href="/css/styles.css" as="style">
 
     <!-- Charger Netlify Identity Widget -->
-    <script src="https://unpkg.com/netlify-identity-widget@latest/netlify-identity-widget.min.js"></script>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
 
     <!-- Capturer l'invite token -->
     <script>
