--- a/login.html
+++ b/login.html
@@ -23,8 +23,14 @@
     </script>
 </head>
 <body>
-    <h1>Connexion à Orpps</h1>
-    <p>Veuillez utiliser le formulaire ci-dessous pour vous connecter.</p>
-    <div id="netlify-auth-widget"></div>
+    <div id="header"></div>
+    <main class="container">
+        <h1>Connexion à Orpps</h1>
+        <p>Veuillez utiliser le formulaire ci-dessous pour vous connecter.</p>
+        <div id="netlify-auth-widget"></div>
+    </main>
+    <div id="footer"></div>
+
+    <script src="/js/script.js" type="module"></script>
 </body>
 </html>
