--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 // Sauvegarder dans localStorage
                 localStorage.setItem("inviteToken", inviteToken);
 
-                // Nettoyer l'URL
+                // Nettoyer l'URL (supprimer #invite_token=...)
                 window.history.replaceState(null, null, window.location.origin + window.location.pathname);
 
-                // Rediriger vers la page de connexion
-                alert("Votre invitation a été capturée. Vous allez être redirigé(e) vers la page de connexion.");
+                // Forcer la redirection vers la page login
+                console.log("Redirection vers /login");
                 window.location.replace("/login");
             }
         });
