--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
 
     <div id="footer"></div>
 
-    <script src="/js/script.js" type="module"></script>
+    <script src="/js/script.js"></script>
 </body>
 </html>
