--- a/login.html
+++ b/login.html
@@ -8,8 +8,9 @@
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+            console.log("Chargement de la page de connexion...");
+
             if (typeof netlifyIdentity !== "undefined") {
-                console.log("Netlify Identity initialisé sur la page de connexion.");
                 netlifyIdentity.init({
                     APIUrl: "https://orpps.netlify.app/.netlify/identity",
                 });
@@ -24,14 +25,13 @@
                         console.log("Invitation acceptée avec succès !");
                         localStorage.removeItem("inviteToken");
                         alert("Invitation acceptée. Configurez votre mot de passe pour continuer.");
-                        netlifyIdentity.open("login"); // Ouvrir le formulaire pour définir le mot de passe
+                        netlifyIdentity.open("signup");
                     }).catch((err) => {
                         console.error("Erreur lors de l'acceptation de l'invitation :", err);
                         alert("Impossible de gérer l'invitation. Vérifiez votre email.");
                     });
                 } else {
                     console.error("Aucun token d'invitation trouvé dans localStorage.");
-                    alert("Aucun token d'invitation détecté. Veuillez vérifier votre email.");
                 }
             } else {
                 console.error("Netlify Identity n'est pas disponible.");
