new Identity setup

--- a/espace_personnel.html
+++ b/espace_personnel.html
@@ -10,8 +10,9 @@
 <body>
     <div id="header"></div>
     <main class="container">
-        <button id="loginButton">Se connecter</button>
-        <button id="logoutButton" style="display: none;">se déconnecter</button>
+        <h1>Bienvenue sur votre espace personnel</h1>
+        <button id="account-button">Modifier mon compte</button>
+        <button id="logout-button">Déconnexion</button>
 
     </main>
     <div id="footer"></div>
