--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connexion - Orpps</title>
     <link rel="stylesheet" href="/css/styles.css">
-
+    
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
     
 </head>
