--- a/espace_personnel.html
+++ b/espace_personnel.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Espace personnel</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
+        netlifyIdentity.init();
+    </script>
 </head>
 <body>
     <div id="header"></div>
