--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
         netlifyIdentity.init({
-            locale: 'fr',
-            logo: 'https://orpps.netlify.app/assets/images/logos_orpps/orpps_logo.png'
+            locale: 'fr'
         });
     </script>
 
