--- a/espace_personnel.html
+++ b/espace_personnel.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Espace personnel</title>
+    <title>Orpps - Espace personnel</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/logos_orpps/Orpps_favicon.png">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/recettes.css"> 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
         netlifyIdentity.init();
@@ -14,6 +16,10 @@
     <div id="header"></div>
     <main class="container">
         <h1>Bienvenue sur votre espace personnel</h1>
+
+
+        <h2>Mes recettes favorites</h2>
+        <div id="recettes-list" class="recettes-list"></div>
 
 
     </main>
