--- a/recipeTemplate.html
+++ b/recipeTemplate.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <title id="page-title">{{recipe-title}}</title> <!-- Contenu dynimique pour champs 'Titre recettes'  -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/logos_orpps/Orpps_favicon.png">
     <meta name="description" id="page-description" content="{{recipe-description-with-title}}">
     <!-- Contenu dynimique pour champs 'Description recette'  -->
 
@@ -34,6 +35,9 @@
 
     <!-- Schema.org pour le balisage des recettes (exemple simplifié) -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
+        netlifyIdentity.init({ locale: 'fr' });
+    </script>
     <script type="application/ld+json">
         {
             "@context": "https://schema.org",
@@ -238,7 +242,7 @@
                 </div>
                 <div class="secondary-buttons">
 
-                    <add-favorite-button data-recipe-id="{{recipe-id}}"></add-favorite-button>
+                    <add-favorite-button data-recipe-id="{{recipe-id}}" onclick="event.preventDefault(); addToFavorites(event)"></add-favorite-button>
                     <share-button></share-button>
 
                 </div>
