--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Orpps - Accueil</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/logos_orpps/Orpps_favicon.png">
     <link rel="stylesheet" href="/css/styles.css">
     
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
