add pages planificateur & liste de course

--- a/liste_de_course.html
+++ b/liste_de_course.html
@@ -2,19 +2,24 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liste de Course</title>
-    <link rel="stylesheet" href="/Orpps/css/styles.css"> <!-- Incluez vos fichiers CSS ici -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Orpps - Liste de course</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/logos_orpps/Orpps_favicon.png">
+    <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
+        netlifyIdentity.init();
+    </script>
 </head>
 <body>
-    <div id="header"></div> <!-- Conteneur pour charger le header -->
-
+    <div id="header"></div>
     <main class="container">
-        <h1>Liste de Course</h1>
-        <p>Bienvenue sur la page de la liste de course !</p>
-        <!-- Ajoutez votre contenu ici -->
-    </main>
 
-    <script src="/Orpps/js/script.js"></script> <!-- Incluez votre fichier JS ici -->
+        <h1>Ma liste de course</h1>
+
+
+    </main>
+    <div id="footer"></div>
+    <script src="/js/script.js" type="module"></script>
 </body>
 </html>
