--- a/Recettes-favorites.html
+++ b/Recettes-favorites.html
@@ -18,7 +18,7 @@
         <div class="categories">
             <div class="allCategories" id="categories">
                 <div id="allRecipes">
-                    <h6>Toutes les recettes</h6>
+                    <h6>Tout les favoris</h6>
                 </div>
                 <span style="padding: 0 8px;"><h6 style="color: #CB6863;">></h6></span>
                 <div class="category" id="Apéritif">
