--- a/espace_personnel.html
+++ b/espace_personnel.html
@@ -6,7 +6,7 @@
     <title>Orpps - Espace personnel</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/logos_orpps/Orpps_favicon.png">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/recettes.css"> 
+    <link rel="stylesheet" href="/css/espace_personel.css"> 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
         netlifyIdentity.init();
