--- a/planificateur_de_menu.html
+++ b/planificateur_de_menu.html
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/logos_orpps/Orpps_favicon.png">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/planificateur_de_menu.css">
+    <link rel="stylesheet" href="/css/recettes.css"> 
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
         netlifyIdentity.init();
