--- a/liste_de_course.html
+++ b/liste_de_course.html
@@ -6,6 +6,8 @@
     <title>Orpps - Liste de course</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/logos_orpps/Orpps_favicon.png">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/recette-details.css">
+    <link rel="stylesheet" href="/css/liste_de_course.css">
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
         netlifyIdentity.init();
@@ -16,10 +18,12 @@
     <main class="container">
 
         <h1>Ma liste de course</h1>
+        <div class="ingredient_list"></div>
 
 
     </main>
     <div id="footer"></div>
     <script src="/js/script.js" type="module"></script>
+    <script src="/js/liste_de_courses.js" type="module"></script>
 </body>
 </html>
